# Gmath

./: README.md  __init__.py  geom.py  metrics.py  objects.py  pyproject.toml
src/: __init__.py  metrics.py  objects.py
src/Gmath.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
